--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 spring.application.name=helpdesk
 
 #Puerto del servidor
-server.port=7070
+server.port=${SERVER_PORT}
 
 # Configuración de la base de datos
-spring.datasource.url=jdbc:postgresql://localhost:5432/helpdeskdb
-spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 # Hibernate y JPA
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO}
+spring.jpa.show-sql=${SPRING_JPA_SHOW_SQL}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
